--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E2B I ECREEA TO BUSINESS</title>
+    <meta name="author" content="Ecreea Company" />
+    <meta
+      name="description"
+      content="E2B es el mejor e-commerce del Peru, te brindamos soluciones para tu negocio."
+    />
+    <meta property="og:title" content="ECREEA TO BUSINESS" />
+
+    <title>E2B | ECREEA TO BUSINESS</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
